Closed Bug 674722 Opened 14 years ago Closed 14 years ago

IonMonkey: Segmentation fault in IonBuilder::processDoWhileBodyEnd on null MBasicBlock

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: adrake, Assigned: h4writer)

References

Details

Attachments

(2 files)

Attached file Test case
Attached test case crashes on x86 debug builds.
Assignee: general → hv1989
Is the same as: function f() { do { break; } while(0) } Looking into it now
This may be related to bug 674772? Both seem like bookkeeping issues.
Attached patch PatchSplinter Review
Occurred when all paths had break statements in a do-while loop. So is not related with bug #674772
Attachment #549070 - Flags: review?(dvander)
Attachment #549070 - Attachment is patch: true
Attachment #549070 - Attachment mime type: text/x-patch → text/plain
Comment on attachment 549070 [details] [diff] [review] Patch Review of attachment 549070 [details] [diff] [review]: -----------------------------------------------------------------
Attachment #549070 - Flags: review?(dvander) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: