Bug 674722: Fix parsing of do-while loops with only break statements in IonBuilder, r=dvander