js/src/ion/IonBuilder.cpp
@@ -660,6 +660,20 @@ IonBuilder::processDoWhileBodyEnd(CFGState &state)
     if (!processDeferredContinues(state))
         return ControlStatus_Error;
 
+    // If there is still no current, there are only break statements in the do while.
+    // So in that case just finalize loop and don't process the condition statement.
+    if (!current) {
+        if (!finalizeLoop(state, NULL))
+            return ControlStatus_Error;
+
+        current = state.loop.successor;
+        if (!current)
+            return ControlStatus_Ended;
+
+        pc = current->pc();
+        return ControlStatus_Joined;
+    }
+
     MBasicBlock *header = newBlock(current, state.loop.updatepc);
     if (!header)
         return ControlStatus_Error;
